Fix create phone number workflow

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -19,6 +19,6 @@
     </ul>
 </p>
 
-<%= link_to 'Add phone number', new_phone_number_path %>
+<%= link_to 'Add phone number', new_phone_number_path(person_id: @person.id) %>
 <%= link_to 'Edit', edit_person_path(@person) %>
 <%= link_to 'Back', people_path %>
