--- a/app/views/phone_numbers/_form.html.erb
+++ b/app/views/phone_numbers/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="hidden_field">
     <%= f.label :number %><br>
     <%= f.text_field :number %>
   </div>
   <div class="field">
-    <%= f.label :person_id %><br>
+  <br>
     <%= f.number_field :person_id %>
   </div>
   <div class="actions">
