--- a/app/views/email_addresses/_form.html.erb
+++ b/app/views/email_addresses/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="hidden_field">
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </div>
   <div class="field">
-    <%= f.label :person_id %><br>
+    <br>
     <%= f.number_field :person_id %>
   </div>
   <div class="actions">
