--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -19,6 +19,16 @@
     </ul>
 </p>
 
+<p>
+  <strong>Email Address(es)</strong>
+    <ul>
+      <% @person.email_addresses.each do |email_address| %>
+        <li><%= email_address.address %> <%= link_to('edit', edit_email_address_path(email_address)) %></li>
+      <% end %>
+    </ul>
+</p>
+
 <%= link_to 'Add phone number', new_phone_number_path(person_id: @person.id) %>
+<%= link_to 'Add e-mail address', new_email_address_path(person_id: @person.id) %>
 <%= link_to 'Edit', edit_person_path(@person) %>
 <%= link_to 'Back', people_path %>
