--- a/app/views/email_addresses/_form.html.erb
+++ b/app/views/email_addresses/_form.html.erb
@@ -15,9 +15,9 @@
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </div>
-  <div class="field">
-    <%= f.label :person_id %><br>
-    <%= f.number_field :person_id %>
+  <div class="hidden_field">
+
+    <%= f.hidden_field :person_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
