--- a/app/views/phone_numbers/index.html.erb
+++ b/app/views/phone_numbers/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Number</th>
       <th>Person</th>
-      <th></th>
+      <th>Type</th>
       <th></th>
       <th></th>
     </tr>
@@ -15,7 +15,8 @@
     <% @phone_numbers.each do |phone_number| %>
       <tr>
         <td><%= phone_number.number %></td>
-        <td><%= phone_number.person_id %></td>
+        <td><%= phone_number.contact_id %></td>
+        <td><%= phone_number.contact_type %></td>
         <td><%= link_to 'Show', phone_number %></td>
         <td><%= link_to 'Edit', edit_phone_number_path(phone_number) %></td>
         <td><%= link_to 'Destroy', phone_number, method: :delete, data: { confirm: 'Are you sure?' } %></td>
