--- a/app/views/email_addresses/_form.html.erb
+++ b/app/views/email_addresses/_form.html.erb
@@ -15,11 +15,15 @@
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </div>
-  <div class="hidden_field">
 
-    <%= f.hidden_field :person_id %>
-
+   <div class="hidden_field">
+    <%= f.hidden_field :contact_id %>
   </div>
+
+  <div class="hidden_field">
+    <%= f.hidden_field :contact_type %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
