--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -2,7 +2,7 @@
   %body
     #account
       %p
-        -if current_user
+        =if current_user
           -link_to "Logout", logout_path, id: "logout", method: 'delete'
         -else
           -link_to "Login", login_path, id: "login"
