--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -1,3 +1,7 @@
+%p.logout{:style=> "text-align: right; font-size: .75em;"}
+  =if current_user
+    -link_to "Logout", logout_path, id: "logout", method: 'delete'
+
 %h1 Listing companies
 
 %table
@@ -17,3 +21,4 @@
 %br
 
 = link_to 'New Company', new_company_path, id: 'new_company'
+= link_to 'Go to People', people_path, id: 'people'
