--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -1,20 +1,25 @@
-%h1 Listing people
+%p.logout{:style=> "text-align: right; font-size: .75em;"}
+  =if current_user
+    -link_to "Logout", logout_path, id: "logout", method: 'delete'
 
-%table
-  %tr
-    %th Name
-    %th
+  %h1 Listing people
 
-- @people.each do |person|
-  %tr
-    %td= person.first_name
-    %td= person.last_name
-    %td
-      %ul
-        %li= link_to 'Show', person
-        %li= link_to 'Edit', edit_person_path(person)
-        %li= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' }
+  %table
+    %tr
+      %th Name
+      %th
 
-%br
+  - @people.each do |person|
+    %tr
+      %td= person.first_name
+      %td= person.last_name
+      %td
+        %ul
+          %li= link_to 'Show', person
+          %li= link_to 'Edit', edit_person_path(person)
+          %li= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' }
+
+  %br
 
 = link_to 'New Person', new_person_path, id: 'new_person'
+= link_to 'Got to Companies', companies_path, id: 'companies'
