--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -1,7 +1,4 @@
-%p.logout{:style=> "text-align: right; font-size: .75em;"}
-  =if current_user
-    -link_to "Logout", logout_path, id: "logout", method: 'delete'
-
+= render 'shared/logout'
   %h1 Listing people
 
   %table
