Phone number validation and formatting. Also added delete links and fixed back links in new

--- a/app/views/email_addresses/new.html.haml
+++ b/app/views/email_addresses/new.html.haml
@@ -1,4 +1,4 @@
 %h1
   = "New Email Address for #{@email_address.contact}"
 = render 'form'
-= link_to 'Back', email_addresses_path
+= link_to 'Back', @email_address.contact
