--- a/app/views/email_addresses/_email_addresses.html.haml
+++ b/app/views/email_addresses/_email_addresses.html.haml
@@ -5,3 +5,4 @@
       %li
         = email_address.address
         = link_to('edit', edit_email_address_path(email_address))
+        = link_to 'delete', email_address, method: :delete, data: { confirm: 'Are you sure?' }
