--- a/app/views/phone_numbers/_phone_numbers.html.haml
+++ b/app/views/phone_numbers/_phone_numbers.html.haml
@@ -3,5 +3,6 @@
   %ul
     - phone_numbers.each do |phone|
       %li
-        = phone.number
+        = number_to_phone(phone.number)
         = link_to('edit', edit_phone_number_path(phone))
+        = link_to 'delete', phone.number, method: :delete, data: { confirm: 'Are you sure?' }
